--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
     "@supabase/supabase-js": "^2.86.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.555.0",
-    "next": "16.0.4",
+    "next": "^16.0.8",
     "papaparse": "^5.5.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8"
   },
   "devDependencies": {
