--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.0",
+    "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.555.0",
     "next": "^16.0.8",
